# nff

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  test_migration.ps1
.claude/: settings.local.json
.claude/commands/: nff.md  wokwi-diagram.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: platformio-backend.md
nff/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py
nff-rs/: Cargo.toml
nff-rs/nff/: Cargo.toml
nff-rs/nff/graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  manifest.json
nff-rs/nff/graphify-out/cache/: stat-index.json
nff-rs/nff/src/: cli.rs  main.rs  mcp_server.rs
nff-rs/nff/src/commands/: agent.rs  auth.rs  clean.rs  compile.rs  connect.rs  debug.rs  doctor.rs  flash.rs  init.rs  install_deps.rs  mcp.rs  mod.rs  monitor.rs  ota.rs  pi.rs  provision.rs  repair.rs  wokwi.rs
nff-rs/nff/src/tools/: arduino_lib.rs  auth.rs  boards.rs  config.rs  daemon.rs  debug.rs  installer.rs  mod.rs  pi.rs  pio.rs  retry.rs  serial.rs  toolchain.rs  wokwi.rs
nff-rs/nff/tests/: cli.rs  mcp.rs
nff-rs/platformio_rs/: Cargo.toml  README.md
nff-rs/platformio_rs/parity/: .gitignore  NOTICE.md  conftest.py  run_parity.sh
nff-rs/platformio_rs/parity/shim/: clirunner_shim.py
nff-rs/platformio_rs/src/: cli.rs  lib.rs
nff-rs/platformio_rs/src/config/: error.rs  ini.rs  mod.rs  options.rs  project_config.rs  tests.rs  value.rs
nff/assets/arduino_bootstrap/: arduino_bootstrap.ino
nff/commands/: agent_cmd.py  auth_cmd.py  clean.py  compile_cmd.py  connect.py  debug.py  doctor.py  flash.py  init.py  install_deps.py  mcp_cmd.py  monitor.py  ota.py  pi.py  provision.py  repair.py  test.py  wokwi.py  wokwi_cmd.py
nff/skills/: nff.md  wokwi-diagram-extended.md  wokwi-diagram.md
nff/tools/: arduino_lib.py  auth.py  boards.py  bootstrap.py  daemon.py  debug.py  installer.py  netinfo.py  pi.py  provisioning_client.py  retry.py  serial.py  toolchain.py  wokwi.py  wokwi_installer.py
nff/tools/backends/: __init__.py  platformio.py
scripts/: install_arduino_cli.py
sketches/blink_esp32/: blink_esp32.ino
sketches/esp32_vitals/: esp32_vitals.ino
sketches/nff_demo/: nff_demo.ino
sketches/sos_blink/: sos_blink.ino
sketches/wifi_scan/: wifi_scan.ino
tests/: conftest.py  test_agent.py  test_arduino_lib.py  test_boards.py  test_bootstrap.py  test_config.py  test_daemon.py  test_debug.py  test_doctor.py  test_init.py  test_installer_toolchain.py  test_mcp.py  test_netinfo.py  test_pi.py  test_platformio.py  test_provisioning_client.py  test_retry.py  test_serial.py  test_toolchain.py  test_wokwi.py
