[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "nff"
version = "0.2.17"
description = "Claude Code IoT Bridge — connect Claude to hardware via USB"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gauthier Lechevalier", email = "gauthier.lechevalier26@gmail.com" }]
requires-python = ">=3.10"
keywords = ["arduino", "esp32", "mcp", "claude", "iot", "serial", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyserial>=3.5",
    "mcp>=1.0.0",
    "click>=8.0",
    "rich>=13.0",
    "esptool>=4.0",
]

[project.urls]
Homepage = "https://github.com/GLechevalier/nff"
Repository = "https://github.com/GLechevalier/nff"
"Bug Tracker" = "https://github.com/GLechevalier/nff/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black",
    "ruff",
    "maturin>=1,<2",
]

[tool.maturin]
bindings      = "bin"
manifest-path = "nff-rs/nff/Cargo.toml"
python-source = "."
include       = [{ path = "nff/skills/*.md", format = "wheel" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
