[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "nff"
version = "0.2.29"
description = "Claude Code IoT Bridge — connect Claude to hardware via USB"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gauthier Lechevalier", email = "gauthier.lechevalier26@gmail.com" }]
requires-python = ">=3.10"
keywords = ["arduino", "esp32", "mcp", "claude", "iot", "serial", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
# No runtime dependencies: the wheel ships the self-contained Rust binary
# (maturin bindings = "bin"); the `nff` command is that binary, not Python.

[project.urls]
Homepage = "https://github.com/GLechevalier/nff"
Repository = "https://github.com/GLechevalier/nff"
"Bug Tracker" = "https://github.com/GLechevalier/nff/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black",
    "ruff",
]

[tool.maturin]
# Build the Rust binary from nff-rs/ and package it as the `nff` command. The wheel
# is platform-specific and contains only the compiled binary — no Python package.
bindings = "bin"
manifest-path = "nff-rs/nff/Cargo.toml"
# The reference Python package lives at ./nff, which maturin auto-detects (it matches the
# project name) and would bundle. Exclude it so the wheel ships ONLY the binary — the
# in-repo Python stays a dev/reference artifact, not shipped.
exclude = ["nff/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
