[package]
name = "nff"
version = "0.2.22"
edition = "2021"

[[bin]]
name = "nff"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
serialport  = "4"
rusb        = "0.9"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
indicatif   = "0.17"
console     = "0.15"
reqwest     = { version = "0.12", features = ["blocking", "json"] }
zip         = "2"
flate2      = "1"
tar         = "0.4"
which       = "6"
thiserror   = "1"
anyhow      = "1"
rmcp        = { version = "1", features = ["server", "macros", "transport-streamable-http-server"] }
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
axum        = { version = "0.8", features = ["http1", "tokio"] }
schemars    = { version = "1", features = ["derive"] }
getrandom   = "0.3"
form_urlencoded = "1"
regex       = "1"
wait-timeout = "0.2"

[target.'cfg(windows)'.dependencies]
winreg      = "0.52"
