[package]
name = "platformio_rs"
version = "0.1.0"
edition = "2021"
description = "Native-Rust reimplementation of PlatformIO Core, driven by nff."

# Library: consumed in-process by the `nff` crate.
[lib]
name = "platformio_rs"
path = "src/lib.rs"

# Binary: `pio-rs`, a drop-in CLI used by the differential parity harness so the
# vendored PlatformIO pytest suite can drive it exactly like the Python `pio`.
[[bin]]
name = "pio-rs"
path = "src/bin/pio_rs.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
regex      = "1"
glob       = "0.3"
sha1       = "0.10"
dirs       = "5"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
